--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,37 @@ aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
 Babel==2.9.1
+cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
+charset-normalizer==2.0.6
+click==7.1.2
+colorama==0.4.4
+google-api-core==1.31.3
+google-api-python-client==1.12.8
+google-auth==1.35.0
+google-auth-httplib2==0.1.0
+Google-Images-Search==1.3.9
+googleapis-common-protos==1.53.0
+httplib2==0.19.1
 idna==3.2
 multidict==5.1.0
+packaging==21.0
+Pillow==8.3.2
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyfiglet==0.8.post1
+pyparsing==2.4.7
 python-dotenv==0.19.0
+python-resize-image==1.1.19
 pytz==2021.1
+requests==2.26.0
+rsa==4.7.2
+six==1.16.0
+termcolor==1.1.0
 typing-extensions==3.10.0.2
+uritemplate==3.0.1
+urllib3==1.26.7
+windows-curses==2.2.0
 yarl==1.6.3
